<?xml version="1.0"?>
<package>
  <name>h4r_joysound</name>
  <version>1.0.0</version>
  <description>
    The joysound package, provides a little application which makes it possible 
    to play soundeffects when pressing a specified joystick button. Launchfile
    example uses sound by thatjeffcarter (CC), see sound dir for details.
  </description>
  
  <license>BSD</license>
  <license>CC</license>
  
  <maintainer email="cyborg-x1@gmail.com">Christian Holl</maintainer>
  <author email="cyborg-x1@gmail.com">Christian Holl</author>
  <url type="bugtracker">https://github.com/Hacks4ROS/h4r_joysound/issues</url>
  <url type="repository">https://github.com/Hacks4ROS/h4r_joysound</url>
  
  <build_depend>catkin</build_depend> 
  <build_depend>roscpp</build_depend>  
  <build_depend>sound_play</build_depend>  
  <run_depend>sound_play</run_depend>
  <build_depend>sensor_msgs</build_depend> 
  <run_depend>sensor_msgs</run_depend>
  
  <export>
  </export>
</package>